2005-02-03  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.texi: Fixed several typos; thanks to Michele Baldessari.

2005-01-04  Werner Koch  <wk@g10code.com>

	* gcrypt.texi: Updated to use @copying.  Fixed list of copyright
	years; we had real changes in 2004.  Fixed some formatting issues.

	Merged in changes from the devel branch by Moritz Schulte:
	
	* gcrypt.texi (Miscellaneous): Document gcry_mpi_randomize.
	(Multi Threading): Document GCRY_THREAD_OPTION_PTH_IMPL,
	GCRY_THREAD_OPTION_PTHREAD_IMPL.

2004-05-07  Moritz Schulte  <moritz@g10code.de>

	* gcrypt.texi: Merged several fixes reported by Umberto Salsi.

2004-04-08  Moritz Schulte  <moritz@g10code.de>

	* gcrypt.texi (Multi Threading): Typo fix.

2004-03-11  Marcus Brinkmann  <marcus@g10code.de>

	* gcrypt.texi (Multi Threading): Partially document new thread
	support.

2004-02-24  Werner Koch  <wk@gnupg.org>

	* gcrypt.texi (Calculations): Typo fix.

2004-01-25  Moritz Schulte  <mo@g10code.com>

	* gcrypt.texi (General cipher functions): Fixed descriptions of
	the arguments for GCRYCTL_GET_KEYLEN, GCRYCTL_GET_BLKLEN; reported
	by Randy.

2004-01-14  Moritz Schulte  <mo@g10code.com>

	* gcrypt.texi (Public Key cryptography II): Adjusted to new
	gcry_ac_* API; document flags.

2003-12-04  Werner Koch  <wk@gnupg.org>

	* Makefile.am (gcrypt_TEXINFOS): Removed fdl.texi.

2003-12-03  Werner Koch  <wk@gnupg.org>

	* gcrypt.texi: Changed license from FDL to GPL because this is a
	reference manual only useful along with actual code.
	* fdl.texi: Removed.

	* gcrypt.texi: Minor cleanups
	(Working with keys): Clarified generation of RSA's E parameter.
	(Multi Threading): Clarified.
	
2003-11-11  Werner Koch  <wk@gnupg.org>

	* gcrypt.texi (Working with S-expressions): Added "%b".

2003-11-04  Werner Koch  <wk@gnupg.org>

	* gcrypt.texi (Retrieving random numbers): Add gcry_create_nonce.

2003-08-30  Werner Koch  <wk@gnupg.org>

	* gcrypt.texi (Working with hash algorithms): Clarified that HMAC