@@ -1,6 +1,6 @@
 /* global.c  -	global control functions
  * Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003
- *               2004  Free Software Foundation, Inc.
+ *               2004, 2005  Free Software Foundation, Inc.
  *
  * This file is part of Libgcrypt.
  *
@@ -387,8 +387,8 @@ gcry_set_outofcore_handler( int (*f)( void*, size_t, unsigned int ),
 gcry_err_code_t
 _gcry_malloc (size_t n, unsigned int flags, void **mem)
 {
-  gcry_err_code_t err = GPG_ERR_NO_ERROR;
-  void *m = NULL;
+  gcry_err_code_t err = 0;
+  void *m;
 
   if ((flags & GCRY_ALLOC_FLAG_SECURE) && !no_secure_memory)
     {
@@ -405,8 +405,12 @@ _gcry_malloc (size_t n, unsigned int flags, void **mem)
 	m = _gcry_private_malloc (n);
     }
 
-  if (! m)
-    err = gpg_err_code_from_errno (ENOMEM);
+  if (!m)
+    {
+      if (!errno)
+        errno = ENOMEM;
+      err = gpg_err_code_from_errno (errno);
+    }
   else
     *mem = m;
 
@@ -458,9 +462,15 @@ _gcry_check_heap( const void *a )
 void *
 gcry_realloc (void *a, size_t n)
 {
+  void *p;
+
   if (realloc_func)
-    return realloc_func (a, n);
-  return _gcry_private_realloc (a, n);
+    p = realloc_func (a, n);
+  else
+    p = _gcry_private_realloc (a, n);
+  if (!p && !errno)
+    errno = ENOMEM;
+  return p;
 }
 
 void
